fix: minimum width set for reports to fix squishy tables

--- a/gpack/travian_default/lang/en/compact.css
+++ b/gpack/travian_default/lang/en/compact.css
@@ -9091,4 +9091,5 @@ input.accept{width:12px;height:12px;background-image:url(../../img/a/acc.gif);}
 
 .reports table {
     width: auto;
+    min-width: 500px;
 }
